--- a/donaciones-api/composer.json
+++ b/donaciones-api/composer.json
@@ -16,7 +16,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
-        "laravelcollective/html": "^6.2"
+        "laravelcollective/html": "^6.2",
+        "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
