--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -39,8 +39,9 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
     #RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
+
 # Copy existing application directory permissions
-COPY --chown=www:www . /var/www
+# COPY --chown=www:www . /var/www
 
 # --------------------------------------------------------------------
 # Add docker custom crontab
