--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -35,13 +35,13 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 
 # Add user for laravel application
-    #RUN groupadd -g 1000 www 
-    #RUN useradd -u 1000 -ms /bin/bash -g www www
+    RUN groupadd -g 1000 www 
+    RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
 
 # Copy existing application directory permissions
-# COPY --chown=www:www . /var/www
+COPY --chown=www:www . /var/www
 
 # --------------------------------------------------------------------
 # Add docker custom crontab
