--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -35,8 +35,8 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 
 # Add user for laravel application
-    RUN groupadd -g 1000 www 
-    RUN useradd -u 1000 -ms /bin/bash -g www www
+RUN groupadd -g 1000 www 
+RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
 
@@ -60,7 +60,7 @@ RUN touch /var/log/cron.log
 # --------------------------------------------------------------------
 
 # Change current user to www
- #USER www
+USER www
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 
