--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -61,7 +61,7 @@ RUN touch /var/log/cron.log
 # --------------------------------------------------------------------
 
 # Change current user to www
-USER www
+#USER www
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 
