--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -49,19 +49,19 @@ RUN chmod 0644  /etc/cron.d/crontab
 # Specify crontab file for running
 RUN crontab /etc/cron.d/crontab
 
-#RUN echo "* * * * * root php /var/www/artisan schedule:run >> /var/log/cron.log 2>&1" >> /etc/crontab
+RUN echo "* * * * * root php /var/www/artisan schedule:run >> /var/log/cron.log 2>&1" >> /etc/crontab
 
 RUN touch /var/log/cron.log
 #ENTRYPOINT ["cron", "-f"]
 # --------------------------------------------------------------------
 
 # Change current user to www
-USER www
+#USER www
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 
 #CMD cron  && tail -f /var/log/cron.log
 #CMD ["php-fpm","cron","-f"]
-CMD ["php-fpm"]
+#CMD ["php-fpm"]
 
-#CMD bash -c "cron && php-fpm"
+CMD bash -c "cron && php-fpm"
