--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -36,13 +36,11 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
-# Copy existing application directory permissions
+# Copy existing application directory permissions   
 COPY --chown=www:www . /var/www
 
 # --------------------------------------------------------------------
-
-RUN chown www:www /var/www -R
-
+RUN chmod -R 755 /storage/laravel.log
 # Add docker custom crontab
 ADD crontab /etc/cron.d/crontab
 
@@ -59,7 +57,7 @@ RUN touch /var/log/cron.log
 # --------------------------------------------------------------------
 
 # Change current user to www
-USER www
+#USER www
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 
