--- a/donaciones-api/Dockerfile
+++ b/donaciones-api/Dockerfile
@@ -40,7 +40,7 @@ COPY . /var/www
 COPY --chown=www:www . /var/www
 
 # --------------------------------------------------------------------
-RUN chmod -R 755 /var/www/storage/logs/laravel.log
+    #RUN chmod -R 755 /var/www/storage/logs/laravel.log
 # Add docker custom crontab
 ADD crontab /etc/cron.d/crontab
 
@@ -50,14 +50,14 @@ RUN chmod 0644  /etc/cron.d/crontab
 # Specify crontab file for running
 RUN crontab /etc/cron.d/crontab
 
-RUN echo "* * * * * root php /var/www/artisan schedule:run >> /var/log/cron.log 2>&1" >> /etc/crontab
+RUN echo "* * * * * www php /var/www/artisan schedule:run >> /var/log/cron.log 2>&1" >> /etc/crontab
 
 RUN touch /var/log/cron.log
 #ENTRYPOINT ["cron", "-f"]
 # --------------------------------------------------------------------
 
 # Change current user to www
-#USER www
+USER www
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 
